<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <Button
        android:id="@+id/buttonPressureStart"
        android:layout_width="match_parent"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/pressure_button_start"
        android:textColor="@color/whiteSmoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPressureLength"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@color/whiteWheat3"
        android:text="@string/pressure_length"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintTop_toBottomOf="@+id/buttonPressureStart"
        tools:layout_editor_absoluteX="0dp" />

    <SeekBar
        android:id="@+id/seekBarPressureLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteWheat"
        android:max="1000"
        android:minHeight="80sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPressureLength"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/textViewPressurePressure"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/pressure_pressure"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPressureLength"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewPressureFanMotor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pressure_actuator"
        app:layout_constraintTop_toBottomOf="@+id/textViewPressurePressure"
        tools:layout_editor_absoluteX="0dp" />



</android.support.constraint.ConstraintLayout>