<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.doffs.skorsten.MainActivity$FragmentMain">


    <!--parent container-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        android:layout_weight="0.8"
        <!--child container-->
        <!--each horizontal layout gets 1/3 of remaining space-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/main_button11"
                android:background="@color/blueNavy"
                android:layout_width="fill_parent"
                android:layout_weight="0.4"
                android:layout_height="fill_parent"
                android:drawableTop="@drawable/rectangle"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/main_button11"
                android:textColor="@color/white"
                android:textSize="24sp"/>
            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/main_button12"
                android:background="@color/blueRoyal"
                android:layout_width="fill_parent"
                android:layout_weight="0.4"
                android:layout_height="fill_parent"
                android:text="@string/main_button12"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/main_button21"
                android:background="@color/blueDodger"
                android:layout_width="fill_parent"
                android:layout_weight="0.4"
                android:layout_height="fill_parent"
                android:text="@string/main_button21"
                android:textSize="24sp"/>
            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/main_button22"
                android:background="@color/blueLightSlate"
                android:layout_width="fill_parent"
                android:layout_weight="0.4"
                android:layout_height="fill_parent"
                android:text="@string/main_button22"
                android:textSize="18sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/main_button31"
                android:background="@color/blueGreenishTeal"
                android:layout_width="fill_parent"
                android:layout_weight="0.4"
                android:layout_height="fill_parent"
                android:text="@string/main_button31"
                android:textSize="24sp"/>
            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/main_button32"
                android:background="@color/blueMuddyGrayish"
                android:layout_width="fill_parent"
                android:layout_weight="0.4"
                android:layout_height="fill_parent"
                android:allowUndo="false"
                android:text="@string/main_button32"
                android:textSize="24sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <!-- Just for spacing-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp">
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>