<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.doffs.skorsten.MainActivity$FragmentPDF">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <LinearLayout
        android:id="@+id/linearLayoutPdfButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_pdf_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/buttonshape_a"
            android:text="@string/pdf_button_plus"
            android:textColor="@color/whiteGhost" />
        <Button
            android:id="@+id/button_pdf_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/buttonshape_a"
            android:text="@string/pdf_button_minus"
            android:textColor="@color/whiteGhost" />
        <Button
            android:id="@+id/button_pdf_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/buttonshape_a"
            android:text="@string/pdf_button_home"
            android:textColor="@color/whiteGhost" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutPdfFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPdfButtons"
        >
        <TextView
            android:id="@+id/textViewPdfFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageViewPdf"
        android:layout_width="match_parent"
        android:layout_height="407dp"
        android:layout_marginTop="10sp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPdfFileName"
        tools:layout_editor_absoluteX="19dp" />


</android.support.constraint.ConstraintLayout>